objects/MP_Request__c.object
<CustomObject>
    <description>Used to record requests made of MPs</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency_website__c</fullName>
        <description>The link for the constituency website which shows NCS or TCN support.</description>
        <inlineHelpText>For &quot;Support on Constituency website&quot; requests, please enter the website here.</inlineHelpText>
        <label>Constituency website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field to link the MP request to an MP&apos;s contacft record</description>
        <inlineHelpText>Please choose the MP for which this request relates to.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose an MP contact.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>MPs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MP Requests</relationshipLabel>
        <relationshipName>MP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_visit__c</fullName>
        <inlineHelpText>Enter the date the MP is attending</inlineHelpText>
        <label>Date of visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_they_attend__c</fullName>
        <description>A field to indicate whether the MP attended the programme.</description>
        <inlineHelpText>Please indicate whether the MP attended the programme.</inlineHelpText>
        <label>Did they attend?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Visit_agreed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endorsement_Quote__c</fullName>
        <description>This field is to enter the Endorsement Quote of an MP.</description>
        <inlineHelpText>Enter the Endorsement Quote of the MP here.</inlineHelpText>
        <label>Endorsement Quote</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date_1__c</fullName>
        <label>Event Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Date_2__c</fullName>
        <label>Event Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Date_3__c</fullName>
        <label>Event Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type_1__c</fullName>
        <label>Event Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme visit (dragon)</fullName>
                </value>
                <value>
                    <fullName>Programme visit (guest)</fullName>
                </value>
                <value>
                    <fullName>Graduation (speaker)</fullName>
                </value>
                <value>
                    <fullName>Graduation (guest)</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Dinner/awards ceremony (guest)</fullName>
                </value>
                <value>
                    <fullName>Dinner/awards ceremony (speaker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type_2__c</fullName>
        <label>Event Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme visit (dragon)</fullName>
                </value>
                <value>
                    <fullName>Programme visit (guest)</fullName>
                </value>
                <value>
                    <fullName>Graduation (speaker)</fullName>
                </value>
                <value>
                    <fullName>Graduation (guest)</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Dinner/awards ceremony (guest)</fullName>
                </value>
                <value>
                    <fullName>Dinner/awards ceremony (speaker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type_3__c</fullName>
        <label>Event Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programme visit (dragon)</fullName>
                </value>
                <value>
                    <fullName>Programme visit (guest)</fullName>
                </value>
                <value>
                    <fullName>Graduation (speaker)</fullName>
                </value>
                <value>
                    <fullName>Graduation (guest)</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Dinner/awards ceremony (guest)</fullName>
                </value>
                <value>
                    <fullName>Dinner/awards ceremony (speaker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_MP_been_contacted__c</fullName>
        <inlineHelpText>Previously called &quot; Has MP been contacted?&quot;</inlineHelpText>
        <label>Invitation 1 sent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <formula>&quot;The MP Request name below updates automatically to show the Contact Name and the Request.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select who from TCN is hosting the MP.</inlineHelpText>
        <label>Host</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invitation_2_sent__c</fullName>
        <label>Invitation 2 sent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_3_sent__c</fullName>
        <label>Invitation 3 sent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Account__c</fullName>
        <label>MP Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Advocacy (Delivery), Advocacy (Public Affairs)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MP Requests</relationshipLabel>
        <relationshipName>MP_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MP_s_Support_Level__c</fullName>
        <label>MP&apos;s Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 (fairly against NCS)</fullName>
                </value>
                <value>
                    <fullName>2 (neutral)</fullName>
                </value>
                <value>
                    <fullName>3 (some lukewarm support)</fullName>
                </value>
                <value>
                    <fullName>4 (supportive)</fullName>
                </value>
                <value>
                    <fullName>5 (very supportive - contact for public statements on NCS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>This field is to indicate the MP request.</description>
        <inlineHelpText>Please choose a request</inlineHelpText>
        <label>Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attend Graduation</fullName>
                </value>
                <value>
                    <fullName>Attend RCA Day</fullName>
                </value>
                <value>
                    <fullName>Dragon</fullName>
                </value>
                <value>
                    <fullName>General Visit</fullName>
                </value>
                <value>
                    <fullName>Local Community Leader</fullName>
                </value>
                <value>
                    <fullName>Professional Visit</fullName>
                </value>
                <value>
                    <fullName>Endorsement quote</fullName>
                </value>
                <value>
                    <fullName>Support on constituency website</fullName>
                </value>
                <value>
                    <fullName>Send letter to schools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Autumn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsuccessful_reason__c</fullName>
        <inlineHelpText>Please choose an option for why the MP Request was unsuccessful.</inlineHelpText>
        <label>Unsuccessful reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Visit_agreed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Couldn&apos;t get through</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Not available for any dates</fullName>
                </value>
                <value>
                    <fullName>Did Not Attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_agreed__c</fullName>
        <description>Field to indicate whether the MP has agreed.</description>
        <inlineHelpText>Please indicate whether the MP has agreed.  
Previously called &quot;Visit agreed?&quot;</inlineHelpText>
        <label>Visit or meeting 1 confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_or_meeting_2_confirmed__c</fullName>
        <label>Visit or meeting 2 confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_or_meeting_3_confirmed__c</fullName>
        <label>Visit or meeting 3 confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave_attending__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The wave which the MP is attending.</description>
        <inlineHelpText>Please choose a wave that the MP is attending.</inlineHelpText>
        <label>Wave attending</label>
        <referenceTo>Wave__c</referenceTo>
        <relationshipLabel>MP Requests</relationshipLabel>
        <relationshipName>MP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Who_initiated_the_request__c</fullName>
        <inlineHelpText>Please select who initiated this request.</inlineHelpText>
        <label>Who initiated the request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MP&apos;s office</fullName>
                </value>
                <value>
                    <fullName>TCN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MP Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>B_B_MP_Requests_2016</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Date_of_visit__c</columns>
        <columns>Notes__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>Zoe</value>
        </filters>
        <label>B&amp;B MP Requests 2016</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2015</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Date_of_visit__c</columns>
        <columns>Notes__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>MP Requests 2016</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2015_FWS</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Notes__c</columns>
        <columns>Endorsement_Quote__c</columns>
        <columns>Date_of_visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>Fareisha Wallen-Shim</value>
        </filters>
        <label>MP Requests 2015 FWS</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2016</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Constituency_website__c</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Date_of_visit__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>MP Requests 2016</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2016_AIdan</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Constituency_website__c</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Date_of_visit__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>MP Requests 2016- AIdan</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2016_MM</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>Event_Date_1__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Notes__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>mmaso</value>
        </filters>
        <label>MP Requests 2016 MM</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2016_Surrey</fullName>
        <columns>NAME</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Event_Date_1__c</columns>
        <columns>Event_Type_1__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>delli</value>
        </filters>
        <label>MP Requests 2016 Surrey</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2016_Surrey1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Year__c</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>Event_Date_1__c</columns>
        <columns>Notes__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>delli</value>
        </filters>
        <label>MP Requests 2016 Surrey</label>
    </listViews>
    <listViews>
        <fullName>MP_Requests_2016_Surrey2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Has_MP_been_contacted__c</columns>
        <columns>Visit_agreed__c</columns>
        <columns>MP_s_Support_Level__c</columns>
        <columns>Notes__c</columns>
        <columns>Event_Date_1__c</columns>
        <columns>Event_Type_1__c</columns>
        <columns>Season__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>delli</value>
        </filters>
        <label>MP Requests 2016 Surrey</label>
    </listViews>
    <nameField>
        <label>MP Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP Requests</pluralLabel>
    <recordTypes>
        <fullName>X2013</fullName>
        <active>true</active>
        <label>Advocacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013_Marketing</fullName>
        <active>true</active>
        <description>Used by Marketing for 2013</description>
        <label>2013 Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2013_Programmes_2</fullName>
        <active>true</active>
        <description>Used by Programmes</description>
        <label>Programmes</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Constituency_website_enforcement</fullName>
        <active>false</active>
        <description>Only allows a constituency website address to be put in when Support on constituence website is selected in request</description>
        <errorConditionFormula>IF(AND(NOT(ISPICKVAL(Request__c,&quot;Support on constituency website&quot;)), NOT(ISBLANK( Constituency_website__c ))),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Request__c</errorDisplayField>
        <errorMessage>As you have put an address into constituency website you must select ‘support on constituency website’ or remove the address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_attending_programme</fullName>
        <active>false</active>
        <description>Requires that the Date attending programme field is left blank if the MP has not agreed to attend the programme</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( Visit_agreed__c ,&quot;No&quot;), NOT(ISBLANK(Date_of_visit__c ))),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Date_of_visit__c</errorDisplayField>
        <errorMessage>Please remove this date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Did_they_attend</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(OR(TODAY()&lt; Date_of_visit__c,ISBLANK(Date_of_visit__c)) , ISPICKVAL(Did_they_attend__c,&quot;Yes&quot;)),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Did_they_attend__c</errorDisplayField>
        <errorMessage>Choose this option once the MP has attended the programme.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Endorsement_Quote_enforcement</fullName>
        <active>false</active>
        <description>Only allow Endorsement quote when request is selected</description>
        <errorConditionFormula>IF(AND(NOT(ISPICKVAL(Request__c,&quot;Endorsement Quote&quot;)), NOT(ISBLANK(Endorsement_Quote__c))),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Request__c</errorDisplayField>
        <errorMessage>Please ensure you have selected the right request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_mandatory_field</fullName>
        <active>false</active>
        <description>Within the MP Request object the &quot;Request&quot; field is made mandatory</description>
        <errorConditionFormula>IF(ISPICKVAL(Request__c,&quot;&quot;),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Request__c</errorDisplayField>
        <errorMessage>Please choose an option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Who_initiated_request</fullName>
        <active>false</active>
        <description>Within the MP Request object the &quot;Who initiatd the request&quot; field is made mandatory</description>
        <errorConditionFormula>IF(ISPICKVAL( Who_initiated_the_request__c ,&quot;&quot;),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Who_initiated_the_request__c</errorDisplayField>
        <errorMessage>Please select who initiated this request</errorMessage>
    </validationRules>
</CustomObject>